[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ugboard-engine"
version = "1.0.0"
description = "Uganda's official music chart engine"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    "fastapi>=0.104.1,<0.105",
    "uvicorn[standard]>=0.24.0,<0.25",
    "pydantic>=2.5.0,<3.0",
    "aiohttp>=3.9.1,<4.0",
    "aiohttp-client-cache>=0.14.3,<0.15",
    "sqlalchemy>=2.0.23,<3.0",
    "asyncpg>=0.29.0,<0.30",
    "redis>=5.0.1,<6.0",
    "librosa>=0.10.1,<0.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3,<8.0",
    "pytest-asyncio>=0.21.1,<0.22",
    "black>=23.11.0,<24.0",
    "flake8>=6.1.0,<7.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/ugboard_engine"
Documentation = "https://ugboard-engine.readthedocs.io"
Repository = "https://github.com/yourusername/ugboard_engine.git"

[tool.setuptools.packages.find]
where = ["."]
include = ["ugboard_engine*"]

[tool.black]
line-length = 88
target-version = ['py311']
